--- a/responsive_nav_style.css
+++ b/responsive_nav_style.css
@@ -88,7 +88,7 @@ header{
 
 
 nav{
-    margin-left:2em;
+    margin:0 2em;
     padding: 1em 1em;
     display: flex;
     justify-content: space-between;
